<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/word"
            android:textSize="17dp"
            android:layout_weight="1"
            android:paddingLeft="@dimen/abc_action_bar_default_padding_material">
        </TextView>
        <EditText
            android:id="@+id/etWord"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="6"
            android:hint="@string/enterWord"
            android:textSize="17dp"
            android:singleLine="true">
        </EditText>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        >
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/translation"
            android:paddingLeft="@dimen/abc_action_bar_default_padding_material"
            android:textSize="17dp"
            android:layout_weight="5">
        </TextView>
        <EditText
            android:id="@+id/etTranslation"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="14"
            android:hint="@string/translation_hint"
            android:textSize="17dp"
            android:singleLine="true"
            android:imeOptions="actionDone"
            >
        </EditText>
    </LinearLayout>
    <Button
        android:id="@+id/btnAdd"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:text="@string/add"
        android:textColor="@color/abc_primary_text_disable_only_material_dark"
        android:textStyle="bold"
        android:layout_weight="1"
        android:background="@color/accent_material_light"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="10dp"
        android:textSize="15dp">
    </Button>

    <ListView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:id="@+id/listView"
        android:layout_weight="6"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:text="@string/train"
        android:textColor="@color/abc_primary_text_material_dark"
        android:id="@+id/btnTrain"
        android:textSize="15dp"
        android:layout_weight="1"
        android:background="@color/accent_material_light"
        android:textStyle="bold"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"/>
</LinearLayout>